--- a/styles/style.css
+++ b/styles/style.css
@@ -344,3 +344,57 @@ body {
   margin: 1.5rem 1rem 0 1rem;
   vertical-align: middle;
 }
+
+/* News latter */
+
+.news-latter {
+  border-radius: 16px;
+  max-width: 700px;
+  margin: 4rem auto;
+  padding: 3rem 2rem;
+  /* box-shadow: 0 4px 24px rgba(255,0,0,0.08); */
+  text-align: center;
+}
+
+.newsletter-box .icon img {
+  width: 110px;
+  margin-bottom: 1rem;
+}
+
+.newsletter-box h1 {
+  font-size: 2rem;
+  color: #f00;
+  margin-bottom: 1rem;
+  font-weight: 900;
+}
+
+.newsletter-box p {
+  color: #444;
+  font-size: 1.1rem;
+  margin-bottom: 2rem;
+  max-width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.newsletter-box input[type="email"] {
+  padding: 0.75rem 1.5rem;
+  border-radius: 24px 0 0 24px;
+  border: 1px solid #f00;
+  outline: none;
+  font-size: 1rem;
+  width: 250px;
+  margin-right: -5px;
+}
+
+.subscribe-btn {
+  padding: 0.75rem 3.5rem;
+  border-radius: 0 24px 24px 0;
+  margin-top: 20px;
+  border: none;
+  background: #f00;
+  color: #fff;
+  font-size: 1.25rem;
+  font-weight: bold;
+  cursor: pointer;
+}
